# state

./: .gitignore  Cargo.toml  README.md
migrations/: 001_initial.sql  README.md
src/: error.rs  lib.rs  memory.rs  sqlite.rs  store.rs  watch.rs
